# obsidian-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  project_structure.txt  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-binaries.yml  ci.yml  test.yml
dev-docs/: Obsidian Assistant 路线图.md  完整开发文档.md
docs/: development.md  examples.md  installation.md
docs/vnext3/: CI.md  DEV-SETUP.md  GAP.md  GOLDEN.md  IMPLEMENTATION.md  SPEC.md
scripts/: bench.py  build_binary.py  entrypoint.py  gen_test_vault.py  smoke_binary.py
src/: main.py  quality.py  search.py  similar.py
src/core/: analyzer.py  quality_scorer.py  similarity.py
src/exporters/: exporter.py  report_generator.py
src/oka/cli/: __init__.py  main.py
src/oka/core/: __init__.py  apply.py  config.py  doctor.py  git_utils.py  i18n.py  index.py  pipeline.py  scoring.py  storage.py  watch.py
tests/: cli_helpers.py  conftest.py  test_apply_helpers.py  test_apply_more.py  test_apply_rollback.py  test_b1_apply.py  test_cli_errors.py  test_cli_smoke.py  test_config_module.py  test_doctor.py  test_doctor_locks.py  test_fixtures_manifest.py  test_git_policy.py  test_i18n_output.py  test_main_module.py  test_partial_rollback_reject.py  test_pipeline_helpers.py  test_pipeline_limits.py  test_run_pipeline.py  test_run_summary_apply.py  test_scan_throttle.py  test_scoring.py  test_starvation.py  test_storage_prune.py  test_watch.py
tests/fixtures/sample_vault/notes/: alpha.md  beta.md  bom-note.md  crlf-note.md  delta.md  epsilon.md  eta.md  gamma.md  iota.md  kappa.md  theta.md  zeta.md
tests/fixtures/test_vault/: manifest.json
tests/fixtures/test_vault/Archive/: archive_01.md  archive_02.md  archive_03.md  archive_04.md  archive_05.md
tests/fixtures/test_vault/Daily/: 2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-04.md  2026-01-05.md
tests/fixtures/test_vault/Notes/: edge_anchor_far_01.md  edge_anchor_far_02.md  edge_deleted_related_01.md  edge_deleted_related_02.md  edge_hash_mismatch_01.md  edge_hash_mismatch_02.md  edge_missing_anchor_01.md  edge_missing_anchor_02.md  edge_multi_related_01.md  edge_multi_related_02.md  edge_multi_related_03.md  filler_01.md  filler_02.md  filler_03.md  filler_04.md  filler_cn_03.md  filler_special_01.md  filler_special_02.md  filler_special_03.md  filler_special_04.md  filler_special_05.md  normal_01.md  normal_02.md  normal_03.md  normal_04.md  normal_05.md  normal_06.md  normal_07.md  normal_08.md  normal_09.md  normal_10.md
tests/fixtures/test_vault/Projects/: project_01.md  project_02.md  project_03.md  project_04.md  project_05.md
tests/golden/: conflicts-summary.json  reasoning-output-sample.txt  related-block-missing-anchor.md  related-block-normal.md  run-log-sample.json  run-summary-cold-start.json  run-summary-incremental.json
tests/integration/: test_golden_regression.py  test_integration_smoke.py
tests/perf/: test_perf_smoke.py
tools/: golden_utils.py  update_golden.py
