[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-assistant"
version = "0.0.0"
description = "Obsidian Assistant CLI scaffold."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Obsidian Assistant Contributors" }]
keywords = ["obsidian", "cli"]

[project.scripts]
oka = "oka.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oka*"]
