[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-assistant"
version = "0.0.0"
description = "Obsidian Assistant CLI scaffold."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Obsidian Assistant Contributors" }]
keywords = ["obsidian", "cli"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "black>=24.0",
  "mypy>=1.5.0",
]

[project.scripts]
oka = "oka.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oka*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "oka.cli.*",
  "oka.core.*",
  "oka.__main__",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
