[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-assistant"
version = "0.0.0"
description = "Obsidian Assistant CLI scaffold."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Obsidian Assistant Contributors" }]
keywords = ["obsidian", "cli"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "black>=24.0",
  "mypy>=1.5.0",
]

[project.scripts]
oka = "oka.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oka*"]

[tool.black]
line-length = 88
target-version = ["py38"]
extend-exclude = "(^src/core/|^src/exporters/|^src/(main|quality|search|similar)\\.py$)"

[tool.ruff]
line-length = 88
target-version = "py38"
cache-dir = "C:/Users/lgy/AppData/Local/Temp/ruff_cache"
exclude = [
  "src/core/*",
  "src/exporters/*",
  "src/main.py",
  "src/quality.py",
  "src/search.py",
  "src/similar.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true
exclude = "(^src/core/|^src/exporters/|^src/(main|quality|search|similar)\\.py$)"

[[tool.mypy.overrides]]
module = [
  "oka.cli.*",
  "oka.core.*",
  "oka.__main__",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "core.*",
  "exporters.*",
  "main",
  "quality",
  "search",
  "similar",
]
ignore_errors = true

[tool.coverage.run]
source = ["src"]
data_file = "reports/.coverage"
omit = [
  "tests/*",
  "src/obsidian_assistant.egg-info/*",
  "src/visualizers/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration test suite",
]
